# unsloth

.github/workflows/: agent_platform-ci.yml
agent_platform/: .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  bootstrap.sh  pyproject.toml
agent_platform/docs/: arquitectura.md  licitaciones.md  migrar-a-privado.md
agent_platform/docs/venta/: deck.md  demo-guion.md  one-pager.md
agent_platform/examples/: demo.py  evaluacion_demo.py  juicio_valor_demo.py  licitacion_demo.py  notion_store_demo.py  persistencia_demo.py
agent_platform/scripts/: migrar-a-privado.sh
agent_platform/src/agent_platform/: __init__.py  audit.py  contracts.py  errors.py  execution.py  persistence.py  planner.py  policy.py  reasoning.py  replay.py  sealing.py  tools.py  tools_http.py
agent_platform/src/agent_platform/tenders/: __init__.py  __main__.py  _runtime.py  evaluacion.py  lcsp.py  llm.py  models.py  worker.py
agent_platform/tests/: test_core.py  test_evaluacion.py  test_llm.py  test_notion_store.py  test_persistence.py  test_planner.py  test_sealing.py  test_tenders.py  test_tools_http.py
market-flow-risk-heatmap/: .env.example  .gitignore  README.md  install.ps1  install.sh  pytest.ini  requirements.txt
market-flow-risk-heatmap/app/: streamlit_app.py
market-flow-risk-heatmap/config/: default_config.yaml
market-flow-risk-heatmap/scripts/: build_features.py  check_data.py  download_data.py  run_backtest.py  seed_demo_data.py
market-flow-risk-heatmap/src/: __init__.py  backtest.py  config.py  data_finra.py  data_fred.py  data_yfinance.py  demo_data.py  explain.py  features_breadth.py  features_options.py  (+10 more)
(+8 files in other folders)
